# OpenGlTestEngineForGraphicsPrimitives

./: .gitignore  CMakeLists.txt  README.md  main.cpp
buffers/: CMakeLists.txt  vertex_array_object.cpp  vertex_array_object.h  vertex_buffer_object.cpp  vertex_buffer_object.h
glad/example/c++/: hellowindow2.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
graphics/: CMakeLists.txt  graphics.cpp  graphics.h
primitives/: CMakeLists.txt  point.h  primitive.cpp  primitive.h  quad.cpp  quad.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
shader/: CMakeLists.txt  shader.cpp  shader.h
shaders/: vertex.shader
window/: CMakeLists.txt  context_window.cpp  context_window.h
